--- a/Components/Form/Animated login-and-signup-form/style.css
+++ b/Components/Form/Animated login-and-signup-form/style.css
@@ -73,8 +73,8 @@ body {
   font-size: 1.66rem;
   line-height: 1em;
 }
-.section .user_registered-text,
-.section .user_unregistered-text {
+.section .text,
+.section .text {
   font-size: 0.85rem;
   line-height: 1.4em;
   letter-spacing: 0.5px;
@@ -353,23 +353,8 @@ body {
     padding: 50px 45px;
   }
   
-
-  /* .finputfield {
-    position: relative;
-    top: -20px !important;
-  } */
 }
-/* @-webkit-keyframes Left {
-  0% {
-    transform: translate3d(100%, -50%, 0);
-  }
-  50% {
-    transform: translate3d(-30px, -50%, 0);
-  }
-  100% {
-    transform: translate3d(0, -50%, 0);
-  }
-} */
+
 @keyframes Left {
   0% {
     transform: translate3d(100%, -50%, 0);
@@ -381,17 +366,7 @@ body {
     transform: translate3d(0, -50%, 0);
   }
 }
-/* @-webkit-keyframes right {
-  0% {
-    transform: translate3d(0, -50%, 0);
-  }
-  50% {
-    transform: translate3d(calc(100% + 30px), -50%, 0);
-  }
-  100% {
-    transform: translate3d(100%, -50%, 0);
-  }
-} */
+
 @keyframes right {
   0% {
     transform: translate3d(0, -50%, 0);
@@ -403,13 +378,7 @@ body {
     transform: translate3d(100%, -50%, 0);
   }
 }
-/* @-webkit-keyframes showSignUp {
-  100% {
-    opacity: 1;
-    visibility: visible;
-    transform: translate3d(0, 0, 0);
-  }
-} */
+
 @keyframes showSignUp {
   100% {
     opacity: 1;
